--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
       <td>
         <h1>Revanth Goli</h1>
         <p><em>Student at <strong><a href="https://www.vvitguntur.com/">vvit</a></strong></em></p>
-        <p>I am a web developer and a programmer I would ❤ to learn AI too</p>
+        <p>I am a web developer and a programmer and I would ❤ to learn AI too</p>
       </td>
       </tr>
     </table>
